--- a/config/crd/bases/fleet.roboscale.io_fleets.yaml
+++ b/config/crd/bases/fleet.roboscale.io_fleets.yaml
@@ -225,6 +225,11 @@ spec:
                               a pod at the current time.
                             type: string
                         type: object
+                      serviceExportStatus:
+                        properties:
+                          created:
+                            type: boolean
+                        type: object
                       serviceStatus:
                         properties:
                           created:
