--- a/hack/deploy/fleet_operator.yaml
+++ b/hack/deploy/fleet_operator.yaml
@@ -91,6 +91,12 @@ spec:
                     type:
                       type: string
                   type: object
+                hybrid:
+                  type: boolean
+                instances:
+                  items:
+                    type: string
+                  type: array
               type: object
             status:
               description: FleetStatus defines the observed state of Fleet
@@ -142,48 +148,16 @@ spec:
                   properties:
                     created:
                       type: boolean
-                    status:
-                      description: DiscoveryServerStatus defines the observed state of DiscoveryServer
-                      properties:
-                        configMapStatus:
-                          properties:
-                            created:
-                              type: boolean
-                          type: object
-                        connectionInfo:
-                          properties:
-                            configMapName:
-                              type: string
-                            ip:
-                              type: string
-                          type: object
-                        phase:
-                          type: string
-                        podStatus:
-                          properties:
-                            created:
-                              type: boolean
-                            ip:
-                              type: string
-                            phase:
-                              description: PodPhase is a label for the condition of a pod at the current time.
-                              type: string
-                          type: object
-                        serviceExportStatus:
-                          properties:
-                            created:
-                              type: boolean
-                          type: object
-                        serviceStatus:
-                          properties:
-                            created:
-                              type: boolean
-                          type: object
-                      type: object
+                    phase:
+                      type: string
                   type: object
                 namespaceStatus:
                   properties:
                     created:
+                      type: boolean
+                    federated:
+                      type: boolean
+                    ready:
                       type: boolean
                   type: object
                 phase:
@@ -313,6 +287,18 @@ rules:
       - robot.roboscale.io
     resources:
       - robots
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - types.kubefed.io
+    resources:
+      - federatednamespaces
     verbs:
       - create
       - delete
@@ -538,7 +524,7 @@ spec:
             - --leader-elect
           command:
             - /manager
-          image: robolaunchio/fleet-controller-manager:v0.1.0
+          image: robolaunchio/fleet-controller-manager:v0.1.1
           livenessProbe:
             httpGet:
               path: /healthz
