--- a/.github/ISSUE_TEMPLATE/enhancement.yaml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yaml
@@ -15,3 +15,10 @@ body:
       label: Why is this needed?
     validations:
       required: true
+  
+  - type: textarea
+    id: related-story
+    attributes:
+      label: Related Story
+    validations:
+      required: true
