docs(story): :books: add story links

--- a/.github/ISSUE_TEMPLATE/enhancement.yaml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yaml
@@ -17,8 +17,8 @@ body:
       required: true
   
   - type: textarea
-    id: related-story
+    id: related-tech-story
     attributes:
-      label: Related Story
+      label: Related Technical Story
     validations:
       required: true
