--- a/config/crd/bases/fleet.roboscale.io_fleets.yaml
+++ b/config/crd/bases/fleet.roboscale.io_fleets.yaml
@@ -38,9 +38,15 @@ spec:
               discoveryServerTemplate:
                 description: DiscoveryServerSpec defines the desired state of DiscoveryServer
                 properties:
+                  args:
+                    items:
+                      type: string
+                    type: array
                   cluster:
                     type: string
                   hostname:
+                    type: string
+                  image:
                     type: string
                   reference:
                     description: "ObjectReference contains enough information to let
