--- a/hack/deploy/manifests/fleet_operator.yaml
+++ b/hack/deploy/manifests/fleet_operator.yaml
@@ -530,7 +530,7 @@ spec:
             - --leader-elect
           command:
             - /manager
-          image: robolaunchio/fleet-controller-manager:v0.1.6
+          image: robolaunchio/fleet-controller-manager:v0.1.6-alpha.1
           livenessProbe:
             httpGet:
               path: /healthz
