--- a/hack/deploy/manifests/fleet_operator.yaml
+++ b/hack/deploy/manifests/fleet_operator.yaml
@@ -40,7 +40,7 @@ spec:
     - name: v1alpha1
       schema:
         openAPIV3Schema:
-          description: Fleet is the Schema for the fleets API
+          description: Fleet manages lifecycle and configuration of multiple robots and robot's connectivity layer that contains DDS Discovery Server and ROS bridge services.
           properties:
             apiVersion:
               description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
@@ -51,10 +51,10 @@ spec:
             metadata:
               type: object
             spec:
-              description: FleetSpec defines the desired state of Fleet
+              description: Specification of the desired behavior of the Fleet.
               properties:
                 discoveryServerTemplate:
-                  description: DiscoveryServerSpec defines the desired state of DiscoveryServer
+                  description: Discovery server configuration of fleet. For detailed information, refer the document for the API group `robot.roboscale.io`.
                   properties:
                     args:
                       items:
@@ -98,32 +98,38 @@ spec:
                       type: string
                   type: object
                 hybrid:
+                  description: Determines if the fleet should be federated across clusters or not.
                   type: boolean
                 instances:
+                  description: If `.spec.hybrid` is true, this field includes Kubernetes cluster names which the fleet will be federated to.
                   items:
                     type: string
                   type: array
               type: object
             status:
-              description: FleetStatus defines the observed state of Fleet
+              description: Most recently observed status of the Fleet.
               properties:
                 attachedRobots:
-                  description: Attached launch object information
+                  description: Attached launch object information.
                   items:
                     properties:
                       fleetCompatibility:
+                        description: Compatibility status of attached robot with the fleet.
                         properties:
                           isCompatible:
+                            description: Indicates the robot's compatibility with fleet.
                             type: boolean
                           reason:
+                            description: Indicates the possible incompatibility reason of an attached robot.
                             type: string
                         required:
                           - isCompatible
                         type: object
                       phase:
+                        description: Attached robot phase. For detailed information, refer the document for the API group `robot.roboscale.io`.
                         type: string
                       reference:
-                        description: "ObjectReference contains enough information to let you inspect or modify the referred object. --- New uses of this type are discouraged because of difficulty describing its usage when embedded in APIs. 1. Ignored fields.  It includes many fields which are not generally honored.  For instance, ResourceVersion and FieldPath are both very rarely valid in actual usage. 2. Invalid usage help.  It is impossible to add specific help for individual usage.  In most embedded usages, there are particular restrictions like, \"must refer only to types A and B\" or \"UID not honored\" or \"name must be restricted\". Those cannot be well described when embedded. 3. Inconsistent validation.  Because the usages are different, the validation rules are different by usage, which makes it hard for users to predict what will happen. 4. The fields are both imprecise and overly precise.  Kind is not a precise mapping to a URL. This can produce ambiguity during interpretation and require a REST mapping.  In most cases, the dependency is on the group,resource tuple and the version of the actual struct is irrelevant. 5. We cannot easily change it.  Because this type is embedded in many locations, updates to this type will affect numerous schemas.  Don't make new APIs embed an underspecified API type they do not control. \n Instead of using this type, create a locally provided and used type that is well-focused on your reference. For example, ServiceReferences for admission registration: https://github.com/kubernetes/api/blob/release-1.17/admissionregistration/v1/types.go#L533 ."
+                        description: Resource reference for attached robot.
                         properties:
                           apiVersion:
                             description: API version of the referent.
@@ -151,6 +157,7 @@ spec:
                     type: object
                   type: array
                 discoveryServerStatus:
+                  description: Discovery server instance status. For detailed information, refer the document for the API group `robot.roboscale.io`.
                   properties:
                     created:
                       type: boolean
@@ -186,12 +193,16 @@ spec:
                     - created
                   type: object
                 namespaceStatus:
+                  description: Namespace status. Fleet creates namespace if the `.spec.hybrid` is set to `true`. It creates `FederatedNamespace` if `false`.
                   properties:
                     federated:
+                      description: Sets to `true` if the owned namespace is federated.
                       type: boolean
                     ready:
+                      description: Sets to `true` if the namespace is ready for the resources to be deployed such as robot.
                       type: boolean
                     resource:
+                      description: Generic structure of the most recent status of an owned object. For detailed information, refer the document for the API group `robot.roboscale.io`.
                       properties:
                         created:
                           type: boolean
@@ -228,6 +239,7 @@ spec:
                       type: object
                   type: object
                 phase:
+                  description: Fleet phase.
                   type: string
               type: object
           type: object
@@ -591,7 +603,7 @@ spec:
             - --leader-elect
           command:
             - /manager
-          image: robolaunchio/fleet-controller-manager:v0.1.6-alpha.2
+          image: robolaunchio/fleet-controller-manager:v0.1.6-alpha.3
           livenessProbe:
             httpGet:
               path: /healthz
