--- a/config/crd/bases/fleet.roboscale.io_fleets.yaml
+++ b/config/crd/bases/fleet.roboscale.io_fleets.yaml
@@ -47,6 +47,12 @@ spec:
                       since it takes cloud instance's name automatically. Should be
                       set if the type is `Client`.
                     type: string
+                  domainID:
+                    default: 0
+                    description: ROS domain ID for robot. See https://docs.ros.org/en/foxy/Concepts/About-Domain-ID.html.
+                    maximum: 101
+                    minimum: 0
+                    type: integer
                   hostname:
                     description: If instance type is `Server`, it can be an arbitrary
                       value. If instance type is `Client`, it should be the same with
@@ -104,6 +110,8 @@ spec:
                       instance. If `Client`, instance tries to connect a `Server`
                       instance and hold `Server` configuration in a ConfigMap.
                     type: string
+                required:
+                - domainID
                 type: object
               hybrid:
                 description: Determines if the fleet should be federated across clusters
