--- a/hack/deploy/manifests/fleet_operator.yaml
+++ b/hack/deploy/manifests/fleet_operator.yaml
@@ -59,6 +59,12 @@ spec:
                     cluster:
                       description: Cloud instance name that holds DiscoveryServer instance with `Server` type. Should be empty if the type is `Server` since it takes cloud instance's name automatically. Should be set if the type is `Client`.
                       type: string
+                    domainID:
+                      default: 0
+                      description: ROS domain ID for robot. See https://docs.ros.org/en/foxy/Concepts/About-Domain-ID.html.
+                      maximum: 101
+                      minimum: 0
+                      type: integer
                     hostname:
                       description: If instance type is `Server`, it can be an arbitrary value. If instance type is `Client`, it should be the same with Server's hostname. Used for getting Server's IP over DNS.
                       type: string
@@ -94,6 +100,8 @@ spec:
                     type:
                       description: Instance type can be either `Server` or `Client`. If `Server`, instance creates discovery server resources and workloads. Other `Client` instances can connect to the `Server` instance. If `Client`, instance tries to connect a `Server` instance and hold `Server` configuration in a ConfigMap.
                       type: string
+                  required:
+                    - domainID
                   type: object
                 hybrid:
                   description: Determines if the fleet should be federated across clusters or not.
@@ -605,7 +613,7 @@ spec:
             - --leader-elect
           command:
             - /manager
-          image: robolaunchio/fleet-controller-manager:v0.1.6-alpha.12
+          image: robolaunchio/fleet-controller-manager:v0.1.6-alpha.13
           livenessProbe:
             httpGet:
               path: /healthz
