--- a/hack/deploy/manifests/fleet_operator.yaml
+++ b/hack/deploy/manifests/fleet_operator.yaml
@@ -67,6 +67,9 @@ spec:
                     hostname:
                       description: If instance type is `Server`, it can be an arbitrary value. If instance type is `Client`, it should be the same with Server's hostname. Used for getting Server's IP over DNS.
                       type: string
+                    protocol:
+                      default: TCP
+                      type: string
                     reference:
                       description: Reference to the `Server` instance. It is used if `.spec.type` is `Client`. Referenced object can be previously provisioned in another cluster. In that case, cluster's name can be specified in `.spec.cluster` field.
                       properties:
@@ -612,7 +615,7 @@ spec:
             - --leader-elect
           command:
             - /manager
-          image: robolaunchio/fleet-controller-manager:v0.1.6-alpha.14
+          image: robolaunchio/fleet-controller-manager:v0.1.6-alpha.16
           livenessProbe:
             httpGet:
               path: /healthz
